[gd_scene load_steps=4 format=3 uid="uid://bfqwnwkj2tn3"]

[ext_resource type="Script" path="res://Scene/clipboard_line_edit.gd" id="1_iuvdb"]
[ext_resource type="Texture2D" uid="uid://d3s0rtbtly582" path="res://clipboard_icon.svg" id="2_80akh"]
[ext_resource type="Theme" uid="uid://4vnnn3rdujyi" path="res://h_box_clipboard_edit.tres" id="2_bieon"]

[node name="ClipboardLineEdit" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource("2_bieon")
script = ExtResource("1_iuvdb")

[node name="ClipboardButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
icon = ExtResource("2_80akh")

[node name="LineEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="ClipboardButton" to="." method="on_pressed"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
